--- a/ingest/Dockerfile
+++ b/ingest/Dockerfile
@@ -8,4 +8,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ingest.py .
 
+CMD ["python", "app.py"]  # all logs go to stdout
+
 ENTRYPOINT ["python", "ingest.py"]
